# gazebo_pedsim

./: .gitignore  LICENSE  README.md
pedsim/: CMakeLists.txt  README.md  package.xml
pedsim_ros_plugin/: CMakeLists.txt  README.md  package.xml
pedsim_ros_plugin/config/: points.yaml  spawn_points.yaml
pedsim_ros_plugin/include/pedsim_ros_plugin/: agents.hpp  obstacles.hpp  pedsim_plugin.hpp  waypoints.hpp
pedsim_ros_plugin/launch/: gui.launch  no_gui.launch  pedsim.launch
pedsim_ros_plugin/models/agent/: agent.config  agent.sdf  model.sdf
pedsim_ros_plugin/rviz/: pedsim.rviz
pedsim_ros_plugin/src/: agents.cpp  obstacles.cpp  pedsim_plugin.cpp  waypoints.cpp
pedsim_ros_plugin/srv/: PedSimInit.srv
pedsim_ros_plugin/worlds/: pedsim.world  test.world
pedsim_test/: CMakeLists.txt  README.md
ros_ws/src/pedsim_test/: package.xml
ros_ws/src/pedsim_test/include/pedsim_test/: pedsim_test.hpp
ros_ws/src/pedsim_test/launch/: pedsim_test.launch
ros_ws/src/pedsim_test/src/: pedsim_test.cpp
utilities/: CMakeLists.txt  README.md  package.xml
utilities/include/utilities/: pos_plugin.hpp
utilities/src/: pos_plugin.cpp
