<?xml version="1.0"?>
<package>
  <name>pedsim</name>
  <version>0.2.0</version>
  <description>The pedsim package</description>
  <maintainer email="marc.testier@gmail.com">Marc Testier</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>roscpp</run_depend>
</package>
