<?xml version="1.0"?>
<package format="2">
    <name>pedsim_ros_plugin</name>
    <version>0.1.11</version>
    <description>PedSim ROS plugin for Gazebo 9</description>

    <maintainer email="marc.testier@gmail.com">Marc Testier</maintainer>

    <license>LGPL</license>

    <author email="marc.testier@gmail.com">Marc Testier</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_generation</build_depend>

    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>std_srvs</depend>
    <depend>visualization_msgs</depend>
    <depend>rosconsole</depend>
    <depend>gazebo_ros</depend>
    <depend>pedsim</depend>
    
    <exec_depend>message_runtime</exec_depend>

    <export>
        <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
    </export>
</package>
